# git_linear

./: .gitignore  README.md  controller.py  git_status.py  list_issues.py  main.py  pyproject.toml
utils/git/: branches.py  check_repo.py  status.py
utils/github/: github.py
utils/linear/: issues.py  linear.py
utils/select/: list.py  select.py
