[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lineargit"
version = "0.1.0"
description = "Linear + Git helper CLI"
requires-python = ">=3.10"
dependencies = [
  "inquirer",
  "python-dotenv",
  "requests",
]

[project.scripts]
lineargit = "main:main_menu"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]